# classic-PEG-

./: ProgressiveEdgeGrowthACE.m  README.md  classic_PEG.sln  peg.py
QC-LDPC ACE-PEG/: CMakeLists.txt  README.md
QC-LDPC ACE-PEG/include/: ACE_toolbox.h  CPEG_toolbox.h  PBRL_LDPC_H_Generator.h  read_H_matrix.h
QC-LDPC ACE-PEG/src/: ACE_toolbx.cpp  CPEG_toolbox.cpp  PBRL_LDPC_H_Generator.cpp  main.cpp  read_H_matrix.cpp
classic_PEG/: BigGirth.cpp  BigGirth.h  CyclesOfGraph.cpp  CyclesOfGraph.h  Makefile  Random.cpp  Random.h  ReadMe.txt  Utility.h  classic_PEG.vcxproj  classic_PEG.vcxproj.filters  customIrreg_2.deg  main.cpp  makefile
mm_qc_pega/: README.md  config.yml  graphs.py  mm_qc_pega.py  peg_utils.py
reference_result/: test.bat
reference_result_linux/: .gdb_history  20.alist  DenEvl_cr_0.55_thr_0.0904.alist  DenEvl_cr_0.60_thr_0.0766.alist  DenEvl_cr_0.65_thr_0.0633.alist  DenEvl_cr_0.75_thr_0.0392.alist  DenEvl_cr_0.80_thr_0.0298.alist  DenEvl_cr_0.90_thr_0.0109.alist  MainPEG  test.sh
reference_result_linux/DenEvls/arXiv:0901.2140/: DenEvl_cr_0.50_thr_0.1071.deg  DenEvl_cr_0.55_thr_0.0904.deg  DenEvl_cr_0.60_thr_0.0766.deg  DenEvl_cr_0.65_thr_0.0633.deg  DenEvl_cr_0.70_thr_0.0504.deg  DenEvl_cr_0.75_thr_0.0392.deg  DenEvl_cr_0.80_thr_0.0298.deg  DenEvl_cr_0.85_thr_0.0199.deg  DenEvl_cr_0.90_thr_0.0109.deg
